Fix sponsors not showing up on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -21,20 +21,6 @@ header #hero-img {
 	height: 12.5em;
 }
 
-@media screen and (max-width: 992px) {
-	header h1 {
-		font-size: 10vw;
-	}
-
-	#sponsors-desktop {
-		display: none;
-	}
-
-	#sponsors-mobile {
-		dipslay: block;
-	}
-}
-
 #about img, #media img {
 	width: 100%;
 	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
@@ -109,4 +95,23 @@ h2 {
 
 section {
 	padding: 75px 0;
+}
+
+@media screen and (max-width: 992px) {
+	header h1 {
+		font-size: 10vw;
+	}
+
+	#sponsors-desktop {
+		display: none;
+	}
+
+	#sponsors-mobile {
+		display: block;
+		text-align: center;
+	}
+
+	#sponsors-mobile img {
+		width: 80%;
+	}
 }
